--- a/style.css
+++ b/style.css
@@ -16,11 +16,12 @@
     padding-top: 3px;
 }
 .choose-time{
-    display:inline-flex;
-    margin-left: .3in;
+    display: flex;
     padding-top: 25px;
     font-style: italic;
-
+    width: 800px;
+    background-color: aquamarine;
+    flex-direction: row;
 }
 .salarycontainer{
     padding-left: 15px;
@@ -32,17 +33,69 @@
     font-style: italic;
 }
 .salary-input{
-    background-color: rgb(90, 210, 231);
-    height:1.5in;
+    
+    height: 1.2in;
     margin-left: 1in;
-    margin-right: 5in;
-    padding-top: 1em;
+    margin-right: 1in;
+    /* padding-top: 1em; */
     padding-right: 0.5em;
     padding-bottom: 0.5em;
-    padding-left: 0.5em;
-   
-
-}
-.help-center{
+    /* padding-left: 0.5em; */
     display: inline-flex;
+    flex-direction: row;
+}
+
+.help-center{
+ margin-right: 1in;
+ height: auto;
+ box-sizing: border-box;
+}
+.result-gross{
+    font-size: 1.4em;
+    text-align: right;
+    border-bottom: 1px solid #ddd;
+    color: #000;
+    padding: 5px;
+    margin-bottom: 5px;
+    position: relative;
+    display: inline-flex;
+}
+.result-container{
+    margin-left: 1in;
+    width: 1200px;
+}
+.row{
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -2px;
+}
+.monthly-result{
+    padding-left: 2in;
+   
+}
+.result-tax{
+    font-size: 1.4em;
+    text-align: right;
+    border-bottom: 1px solid #ddd;
+    color: #000;
+    padding: 5px;
+    margin-bottom: 5px;
+    position: relative;
+    display: flex;
+}
+.get-help{
+    width: 342px; ;
+}
+.result-net{
+    font-size: 1.4em;
+    text-align: right;
+    border-bottom: 1px solid #ddd;
+    color: #000;
+    padding: 5px;
+    margin-bottom: 5px;
+    position: relative;
+    display: flex;
 }
