--- a/style.css
+++ b/style.css
@@ -99,3 +99,13 @@
     position: relative;
     display: flex;
 }
+.result-insurance{
+    font-size: 1.4em;
+    text-align: right;
+    border-bottom: 1px solid #ddd;
+    color: #000;
+    padding: 5px;
+    margin-bottom: 5px;
+    position: relative;
+    display: flex;
+}
