--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@
     margin-left: -2px;
 }
 .monthly-result{
-    padding-left: 2in;
+    padding-left: 1in;
+    max-width: 50%;
    
 }
 .result-tax{
